# systemprompt-template

./: .dockerignore  .env.example  .env.secrets.example  .fork-divergence  .gitattributes  .gitignore  .gitmodules  .sqlx  AGENTS.md  BRANDING.md  BUG_REPORT_CORE_PRIORITY.md  CHANGELOG.md  CLAUDE.md  CLI_FRICTION_PLAN.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEPLOY-TARGETS.md  Dockerfile  LICENSE  ORG_PROFILE_README.md  PENTEST_REMEDIATION_REPORT.md  PLAN.md  README.md  SCHEMA_TABLES.md  brew.md  build.rs  cleanup.md  clippy.toml  deb.html  deny.toml  docker-compose.yml  flake.nix  justfile  package-lock.json  plan1.md  releases.html  rpm.html  rust-toolchain.toml  rustc-ice-2026-07-21T18_23_35-2103225.txt  (+7 more)
__mcp-system-tools/: Cargo.toml
__mcp-system-tools/src/: lib.rs  main.rs
__mcp-system-tools/src/server/: mod.rs
__mcp-system-tools/src/tools/: glob.rs  grep.rs  write_file.rs
crates/modules/agent/: Cargo.toml
crates/modules/blog/: .gitignore  Cargo.toml  SCHEMA_ANALYSIS.md  module.yml
crates/modules/config/: Cargo.toml  README.md
crates/modules/core/: Cargo.toml  README.md  module.yml
crates/modules/database/: Cargo.toml  module.yml
crates/modules/files/: Cargo.toml
crates/modules/oauth/: Cargo.toml  README.md  module.yml
crates/modules/scheduler/: Cargo.toml  README.md
crates/shared/identifiers/: Cargo.toml
extensions/cli/discord/: Cargo.toml  manifest.yaml
extensions/mcp/content-manager/: Cargo.toml  manifest.yaml
extensions/mcp/infrastructure/: .env.example  .gitignore  Cargo.toml  README.md
extensions/mcp/marketplace/: Cargo.toml  manifest.yaml
extensions/mcp/moltbook/: Cargo.toml  manifest.yaml
extensions/mcp/shared/: Cargo.toml
extensions/mcp/soul/: Cargo.toml  manifest.yaml
extensions/mcp/system-tools/: Cargo.toml  manifest.yaml
extensions/mcp/systemprompt/: Cargo.toml  manifest.yaml
extensions/moltbook/: Cargo.toml
extensions/moltbook/schema/: 001_moltbook_agents.sql  002_moltbook_posts.sql  003_moltbook_analytics.sql
extensions/moltbook/src/: error.rs  extension.rs  lib.rs
extensions/soul/: Cargo.toml
extensions/soul/schema/: 001_soul_memories.sql
extensions/soul/src/: error.rs  extension.rs  identifiers.rs  lib.rs
extensions/web/: Cargo.toml  README.md  build.rs
extensions/web/.sqlx/: query-00e856ccc693317d03ae5a351fb646312f6698f769c16464de2187e6f6c18053.json  query-042149b48f4394ad303316acb78ba344b40b1537266310636065608587b80453.json  query-047b9c656c770323429df28e773b6bbf77dfd43ea7114d6d040f9044a787efed.json  query-052bb9741e211e215b1c6747b90fe6f1b9e7ba3a73a8338c9007c32b7bc8b902.json  query-05d96209e8718fb28c6ed9567573cd2521e30a4b6f25d96cde1073bea89668ba.json  query-069a6593499e9007a6f3b0097af640f84f4b38309884fb7236ff0f7ae215ea03.json  query-071c4ca15333d0e3f772c2bd0ff7e5340fdacd6b48c3d053a5c78e2a6c4e0023.json  query-0760380b7bd34039a91d6d0ef7f6b84ef4954d180da8a032a632b67da38e623f.json  query-0791a283d086059bd7a66b897da374078c38d30cc99a561311b054c5b9cb3950.json  query-097b49a6dca9f6d8d5845c1279399ce8e050a2eb41a6010f03f0045f0b50b4a9.json  query-09fdca6e9a36d360ddd6a550eeb8100abdb4a107a369b148e6bb31a9eb8bfc29.json  query-0a7aee0f0d0507335e84a7769c0b1affcc906d31eaa559cd0a8763a730b2d024.json  query-0b1b160c0af37537dc950640a13dd581debc7828e46a9652338f229636c52a87.json  query-0b564a2440d5f4369a91ee5ba7b1c4fcc9872b50d18453483aba775c89adba81.json  query-0e01095c8187dd244215886bc6ebb4ca49c89ee12c2813887c476d47e9b9b2a2.json  query-0feaae1db78ef4706c4b21bab391ec07512e8f676087ae5780e7d6ce0fb23b07.json  query-108d2153536f6b7d56ab336fcc79ee33efda098ea1d17b30cc06df7000d8256d.json  query-11452c7a4710720da0a4559fbe0356b61038b35434af9e1a78da8424c89339b2.json  query-12c0ea997e8743562eb4a9aa77f1d5473cbd696f45b420a89a2be96a93786a33.json  query-1321e6460804c42e5c5ef4f30aa9556f51397552bc971137d8aff6187ad901e6.json  query-133eba6e51599e8411aff9c8888152541ca5b834f7375f957b305c76f6cc69f8.json  query-139de835d95d9e3ec99d021fcd0c16f346db64c720d0538e2df81ad8f100ea9b.json  query-17fd18ab12f1dffebc396bb4d1a57434e9559cb283469ffc7f1d09b41db85679.json  query-195c3d7e2cc182d1f6f2030a447e4aacca7a776f702a447cd938ef0dc513f797.json  query-195ed4b3ad5c82bc4031fde4dc68afbb65a7d8bd500b54c1307926b607e8775f.json  query-1a778fc2fe8946cbd4c3ce86e956ce1146973c35e1aa947d63060652fa5d4a4f.json  query-1a9ed813d0a50db65b3e2fdb7eb5faaa1b0875a66ab704c28786ee43fff55f68.json  query-1ac18ceaa1c434da2526884d77401a41be45e1b932cd36a757eaaaed33516eab.json  query-1ac677d611d2c75d7def15412648a38ebe9a28826590f4a3c8176fe95e52fe0e.json  query-1b097550fc7b57775f74fd630054a26a68b9e998c6f8ac9b761e66b1e27adb1e.json  query-1cad6b1710a98d64e5feba9e65cd17b4b6a7fcbe3ff54115de5b3da6240bd9f5.json  query-1d0138ac8ceeb92be23390bd72d7f04cedb1b83aecd0df4f651e0a128698f2f6.json  query-1db2fc07aa1385a3f8bc2be65c9c74d60dc5e65318abe2610ca3a2ca42a3e552.json  query-1e993130bd1f171453dfafb3fbd572c576602d4d87eb16616482733536b27da3.json  query-1ecbe047dfe8a32b5fad85bee53353f5ec986e666b8b39940d93102091242c91.json  query-2048dbc859c53a41bb30b5e5dac2f3372fe69687fa7e209f6fd0a4861db0c8ba.json  query-205cccba83c5f2c0ea3085c2556d8ec1bcd43953ad33c9fbfb470d6b08677944.json  query-2109944c8d044fbedd873c16fc16f3eeb34fa89a522f499760d75ada99001fb1.json  query-2263a1092a6c49187ed7bee799c5e3dc51579588e8e7ec66e396c85a944de1f9.json  query-22fc022ea2b2bb7d8cce80c2be6bc6d3d441713e99ba5b2f6bd2a690b176f2a2.json  (+269 more)
extensions/web/admin/: Cargo.toml
extensions/web/content/: Cargo.toml
extensions/web/jobs/: Cargo.toml
extensions/web/schema/: 001_markdown_content.sql  003_campaign_links.sql  004_link_clicks.sql  011_content_category.sql  (+64 more)
tests/: Cargo.toml  prompts_test.rs  repositories_test.rs
tests/.cargo/: config.toml
tests/common/: mod.rs
tests/integration/: README.md  a2a_integration_tests.rs  diagnostic-context-test.ts  lib.rs  mod.rs  package-lock.json  package.json  vitest-setup.ts  vitest.config.ts
tests/prompts/: admin_analysis_test.rs  deployment_guide_test.rs  sync_workflow_test.rs
tests/repositories/: dashboard_test.rs  logs_test.rs  mod.rs  users_test.rs
tests/tools/: dispatch_test.rs  mod.rs
(+7704 files in other folders)
