[workspace]
members = [
    # Local extensions
    "extensions/web",
    # MCP servers
    "extensions/mcp/systemprompt",
    "extensions/mcp/marketplace",
    "extensions/mcp/shared",
]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true

[workspace.package]
edition = "2021"
version = "0.1.3"
authors = ["systemprompt.io <support@systemprompt.io>"]
license = "MIT"

[workspace.dependencies]
# ============================================
# CORE FACADE (single dependency for all systemprompt-core)
# ============================================
systemprompt = { version = "0.1.17", features = ["full"] }

# ============================================
# LOCAL EXTENSIONS
# ============================================
systemprompt-web-extension = { path = "extensions/web" }
systemprompt-mcp-shared = { path = "extensions/mcp/shared" }

# Core runtime dependencies
tokio = { version = "1.49", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros", "fs", "process", "signal"] }
tokio-stream = "0.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "migrate", "chrono", "rust_decimal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = { version = "1.0", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
thiserror = "2.0"
shell-words = "1.1"
indexmap = { version = "2.0", features = ["serde"] }

# HTTP/API
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "normalize-path"] }

# Utilities
futures = "0.3"
chacha20poly1305 = "0.10"
schemars = { version = "1.0", features = ["derive"] }
inventory = "0.3"
walkdir = "2.0"
tempfile = "3.0"
url = "2.5"
urlencoding = "2.1"

# Security
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Markdown processing
pulldown-cmark = "0.13"
comrak = { version = "0.50", default-features = false }
handlebars = "6"

# Timezone
chrono-tz = "0.10"

# Archive
flate2 = "1.0"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

# SSE streaming
async-stream = "0.3"

# MCP Protocol
rmcp = { version = "1.1", features = ["server", "client", "transport-io", "transport-streamable-http-server", "transport-streamable-http-server-session", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "macros", "auth"] }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
missing_docs_in_private_items = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
unwrap_or_default = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"

[workspace.lints.rust]
unsafe_code = "forbid"

# ============================================
# ROOT PACKAGE (Template Application)
# ============================================
[package]
name = "systemprompt-template"
version.workspace = true
edition.workspace = true
description = "systemprompt-template — Production AI agent platform built on systemprompt-core"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "systemprompt"
path = "src/main.rs"

[dependencies]
# Core framework (facade)
systemprompt = { workspace = true }

# Local extensions
systemprompt-web-extension = { workspace = true }

# Runtime
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }

[build-dependencies]
serde_yaml = "0.9"

[lints]
workspace = true

# ============================================
# LOCAL DEVELOPMENT PATCHES (uncomment to use local core)
# ============================================
[patch.crates-io]
systemprompt = { path = "../systemprompt-core/systemprompt" }
