[package]
name = "system-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "system-tools"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true

rmcp.workspace = true

axum.workspace = true

serde.workspace = true
serde_json.workspace = true

glob = "0.3"
regex.workspace = true
walkdir.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true

systemprompt-core-system.workspace = true
systemprompt-core-mcp.workspace = true
systemprompt-core-logging.workspace = true
systemprompt-core-database.workspace = true
systemprompt-core-ai.workspace = true
systemprompt-core-agent.workspace = true
systemprompt-models.workspace = true
systemprompt-identifiers.workspace = true

[lints]
workspace = true
