# Test workspace for the Enterprise Demo template.
#
# Kept as a SEPARATE workspace (the root [workspace] lists it under `exclude`)
# so these test crates never compile when the extension crates are consumed as
# dependencies, mirroring systemprompt-core's crates/tests layout.
#
# Run:  cargo test --manifest-path tests/Cargo.toml
# Needs a live Postgres for the integration crate — set DATABASE_URL (the
# root justfile's local profile URL works).
[workspace]
members = [
    "unit/mcp",
    "unit/web",
    "integration/mcp",
    "contract/admin",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.0.0"
publish = false

# Test code asserts by panicking and constructs fixtures liberally; relax the
# strict production lints the root workspace enforces.
[workspace.lints.clippy]
unwrap_used = "allow"
expect_used = "allow"
panic = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"

[workspace.dependencies]
# Local extension crates under test (paths relative to tests/).
systemprompt-mcp-shared = { path = "../extensions/mcp/shared" }
systemprompt-mcp-agent = { path = "../extensions/mcp/systemprompt" }
systemprompt-web-shared = { path = "../extensions/web/shared" }
systemprompt-web-admin = { path = "../extensions/web/admin" }
systemprompt-web-extension = { path = "../extensions/web" }

# Core facade — DbPool / Database / identifiers for the integration crate.
# The contract crate additionally enables `full`, which links the core
# extension crates whose `register_extension!` registrations carry the
# migrations the admin schema needs.
systemprompt = { version = "0.22.0", default-features = false, features = ["core", "database"] }
systemprompt-security = { version = "0.22.0" }

# HTTP contract harness — drives the real admin router in-process.
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

tokio = { version = "1.49", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "uuid", "chrono", "json"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
uuid = { version = "1.18", features = ["v4"] }

# Mirrors the root workspace's local-core patch. `[patch]` only applies from
# the manifest of the workspace being built, and tests/ is a separate
# workspace, so without this the test crates resolve core from crates.io
# while the extensions under test resolve it from the local checkout.
# Keep commented for published builds and uncomment in lockstep with the
# root patch block.
# [patch.crates-io]
# systemprompt = { path = "../../systemprompt-core/systemprompt" }
# systemprompt-models = { path = "../../systemprompt-core/crates/shared/models" }
# systemprompt-traits = { path = "../../systemprompt-core/crates/shared/traits" }
# systemprompt-identifiers = { path = "../../systemprompt-core/crates/shared/identifiers" }
# systemprompt-extension = { path = "../../systemprompt-core/crates/shared/extension" }
# systemprompt-provider-contracts = { path = "../../systemprompt-core/crates/shared/provider-contracts" }
# systemprompt-client = { path = "../../systemprompt-core/crates/shared/client" }
# systemprompt-template-provider = { path = "../../systemprompt-core/crates/shared/template-provider" }
# systemprompt-database = { path = "../../systemprompt-core/crates/infra/database" }
# systemprompt-events = { path = "../../systemprompt-core/crates/infra/events" }
# systemprompt-security = { path = "../../systemprompt-core/crates/infra/security" }
# systemprompt-config = { path = "../../systemprompt-core/crates/infra/config" }
# systemprompt-logging = { path = "../../systemprompt-core/crates/infra/logging" }
# systemprompt-loader = { path = "../../systemprompt-core/crates/infra/loader" }
# systemprompt-cloud = { path = "../../systemprompt-core/crates/infra/cloud" }
# systemprompt-users = { path = "../../systemprompt-core/crates/domain/users" }
# systemprompt-oauth = { path = "../../systemprompt-core/crates/domain/oauth" }
# systemprompt-files = { path = "../../systemprompt-core/crates/domain/files" }
# systemprompt-analytics = { path = "../../systemprompt-core/crates/domain/analytics" }
# systemprompt-content = { path = "../../systemprompt-core/crates/domain/content" }
# systemprompt-ai = { path = "../../systemprompt-core/crates/domain/ai" }
# systemprompt-mcp = { path = "../../systemprompt-core/crates/domain/mcp" }
# systemprompt-agent = { path = "../../systemprompt-core/crates/domain/agent" }
# systemprompt-marketplace = { path = "../../systemprompt-core/crates/domain/marketplace" }
# systemprompt-templates = { path = "../../systemprompt-core/crates/domain/templates" }
# systemprompt-runtime = { path = "../../systemprompt-core/crates/app/runtime" }
# systemprompt-scheduler = { path = "../../systemprompt-core/crates/app/scheduler" }
# systemprompt-generator = { path = "../../systemprompt-core/crates/app/generator" }
# systemprompt-sync = { path = "../../systemprompt-core/crates/app/sync" }
# systemprompt-api = { path = "../../systemprompt-core/crates/entry/api" }
# systemprompt-cli = { path = "../../systemprompt-core/crates/entry/cli" }
# systemprompt-slack = { path = "../../systemprompt-core/crates/domain/slack" }
# systemprompt-teams = { path = "../../systemprompt-core/crates/domain/teams" }
