[package]
name = "systemprompt-moltbook-extension"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Moltbook extension for SystemPrompt - AI agent social network integration"

[lints]
workspace = true

[dependencies]
# Core facade - provides all systemprompt types
systemprompt = { workspace = true, features = ["full"] }

# Database access
sqlx.workspace = true

# Web framework and HTTP client
axum.workspace = true
tower.workspace = true
reqwest.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
inventory.workspace = true
url.workspace = true
regex.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
