[package]
name = "systemprompt-soul-extension"
version = "1.0.0"
edition = "2021"
description = "Soul extension for SystemPrompt - memory system and proactive updates"
license = "MIT"
repository = "https://github.com/systempromptio/systemprompt-template"

[lints]
workspace = true

[dependencies]
# Core facade
systemprompt = { workspace = true, features = ["full"] }

# Database access
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Async
tokio = { version = "1.47", features = ["full", "process"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
thiserror = "2.0"
tracing = "0.1"
anyhow = "1.0"
inventory = "0.3"
serde_yaml = "0.9"
secrecy = { version = "0.10", features = ["serde"] }

