[package]
name = "systemprompt-web-extension"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Web extension for the systemprompt.io template: content, navigation, and template rendering for the self-hosted AI governance binary."
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

# extension_migrations!() expands to ::systemprompt_extension paths; machete
# cannot see macro-expansion usage.
[package.metadata.cargo-machete]
ignored = ["systemprompt-extension", "inventory"]

[lints]
workspace = true

[dependencies]
# Core facade - provides all systemprompt types via unified API.
# Audit: uses ai, database, extension, loader, models, traits — requires `full`
# (ai + loader are gated by the `full` feature).
systemprompt = { workspace = true, features = ["full"] }
# Audit: uses ai, database, extension, loader, models, traits — requires `full`
# (ai + loader are gated by full; database/extension/traits/models are lower).

# Local sub-crates
systemprompt-web-shared = { workspace = true }
systemprompt-web-admin = { workspace = true }
systemprompt-web-content = { workspace = true }
systemprompt-web-site = { workspace = true }
systemprompt-web-jobs = { workspace = true }

# Extension framework — direct dep so the `extension_migrations!()` macro
# expansion (`::systemprompt_extension::Migration`) resolves.
systemprompt-extension = "0.22.0"
inventory = { workspace = true }

# Database access

# Web framework
axum = { workspace = true }

# Async

# Serialization
serde_yaml = { workspace = true }

# Markdown processing

# Utilities
thiserror = { workspace = true }
tracing = { workspace = true }

# SSE streaming

# Archive extraction

[build-dependencies]
systemprompt-extension = "0.22.0"

[dev-dependencies]
