[package]
name = "systemprompt-core-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Configuration management module for SystemPrompt OS"

[lints]
workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
systemprompt-models = { path = "../../shared/models" }
systemprompt-core-system = { path = "../core" }
systemprompt-core-database = { path = "../database" }
systemprompt-core-logging = { path = "../log" }
systemprompt-traits = { path = "../../shared/traits" }

# Database
sqlx = { workspace = true }

# Traits
async-trait = { workspace = true }
inventory = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
dotenv = { workspace = true }
urlencoding = { workspace = true }

# Validation
validator = { workspace = true }

# Web interface dependencies (always included)
axum = { workspace = true }

# HTTP client for CLI-to-REST calls
reqwest = { workspace = true }


[features]
default = ["web"]
web = []

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }